Use switch expression for socket handler.